manifests/ingress/traefik/production/ingress-route/dex-aimhighergg-com.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dex-aimhighergg.com
  namespace: dex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dex.aimhighergg.com`)
      services:
        - name: dex
          port:  5556
  tls:
    secretName: dex-aimhighergg-com-tls
