manifests/ingress/traefik/production/ingress-route/dex-dev-aimhighergg-com.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dex-dev-aimhighergg-com
  namespace: dex-dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dex-dev.aimhighergg.com`)
      services:
        - name: dex
          port: 5556
  tls:
    secretName: dex-dev-aimhighergg-com-tls
