manifests/ingress/traefik/production/ingress-route/nextcloud-aimhighergg-com.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.aimhighergg.com`) && (PathPrefix(`/`) 
      kind: Rule
      middlewares:
        - name: ip-whitelist
          namespace: nextcloud
        - name: basic-auth
          namespace: nextcloud
      services:
        - name: nextcloud-nextcloud
          port: 80
  tls:
    secretName: nextcloud-aimhighergg-com-tls
