manifests/ingress/traefik/production/ingress-route/viteful-dev.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: <path:secrets/data/viteful/dev/namespace#NAMESPACE>
  namespace: <path:secrets/data/viteful/dev/namespace#NAMESPACE>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<path:secrets/data/viteful/dev/ingress#HOST>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: viteful-frontend
          port: 80
  tls:
    secretName: <path:secrets/data/viteful/dev/namespace#NAMESPACE>-tls
