manifests/ingress/traefik/production/ingress-route/viteful-location-2.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: <path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_2>-<path:secrets/data/viteful/production/namespace#NAMESPACE>
  namespace: <path:secrets/data/viteful/production/namespace#NAMESPACE>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<path:secrets/data/viteful/production/ingress#HOST_2>`) && PathRegexp(`^/.+教室(/.*)?$`)
      kind: Rule
      middlewares:
        - name: <path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>-<path:secrets/data/viteful/production/namespace#NAMESPACE>-redirect
      services:
        - name: viteful-frontend-<path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>
          port: 80
    - match: Host(`<path:secrets/data/viteful/production/ingress#HOST_2>`) && PathRegexp(`^/category(/.*)?$`)
      kind: Rule
      middlewares:
        - name: <path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>-<path:secrets/data/viteful/production/namespace#NAMESPACE>-redirect
      services:
        - name: viteful-frontend-<path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>
          port: 80
    - match: Host(`<path:secrets/data/viteful/production/ingress#HOST_2>`) && PathRegexp(`^/お問い合わせ(/.*)?$`)
      kind: Rule
      middlewares:
        - name: <path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>-<path:secrets/data/viteful/production/namespace#NAMESPACE>-redirect
      services:
        - name: viteful-frontend-<path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>
          port: 80
    - match: Host(`<path:secrets/data/viteful/production/ingress#HOST_2>`) && PathRegexp(`^/20[0-9]{2}.*$`)
      kind: Rule
      middlewares:
        - name: <path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>-<path:secrets/data/viteful/production/namespace#NAMESPACE>-redirect
      services:
        - name: viteful-frontend-<path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_1>
          port: 80
    - match: Host(`<path:secrets/data/viteful/production/ingress#HOST_2>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: viteful-frontend-<path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_2>
          port: 80
  tls:
    secretName: <path:secrets/data/viteful/production/env#VITE_LOCATION_NAME_2>-<path:secrets/data/viteful/production/namespace#NAMESPACE>-tls
